--- a/manifest.json
+++ b/manifest.json
@@ -13,5 +13,5 @@
     "manifest_version": 2,
     "web_accessible_resources": [ "bookmarks.html" ],
     "content_security_policy": "script-src 'self'; object-src 'self'",
-    "permissions": [ "bookmarks", "storage", "tabs" ]
+    "permissions": [ "bookmarks", "storage", "tabs", "contextMenus" ]
 }
